--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
     <header>
-
+      <h1>ZASA TACOS</h1>
     </header>
     <body>
         
+
+
     </body>
+    <footer>
+
+    </footer>
 </html>
