--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <header>
-      <h1>ZASA TACOS</h1>
-    </header>
+    <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
+   </head>
     <body>
-        
+       <nav>
 
+        <h1>ZASA TACOS</h1>
+        <h1>MENU</h1>
+        <h1>ABOUT US</h1>
+        <h1>LOCATION</h1>
+        <h1>ORDER ONLINE</h1>
+        <img src="Icons/SVG/Icon-instagram.svg" width="50px", height="50px">
+        <img src="Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
+        <img src="Icons/SVG/Icon-twitter.svg" width="50px", height="50px">
+       </nav>
+
+       <div class="taco__images">
+
+
+       </div>
+
+       <div class="taco_description">
+
+
+       </div>
+
+       <div class="weekly__offers">
+
+
+       </div>
+
+       <div class="subscribe">
+
+
+       </div>
+
+       <div class="reviews">
+
+
+       </div>
 
     </body>
     <footer>
