--- a/Index.html
+++ b/Index.html
@@ -14,13 +14,13 @@
         <h1>ABOUT US</h1>
         <h1>LOCATION</h1>
         <h1>ORDER ONLINE</h1>
-        <img src="Icons/SVG/Icon-instagram.svg" width="50px", height="50px">
-        <img src="Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
-        <img src="Icons/SVG/Icon-twitter.svg" width="50px", height="50px">
+        <img src="./Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
+        <img src="./Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
+        <img src="./Icons/SVG/Icon-twitter.svg" width="50px", height="50px">
        </nav>
 
        <div class="taco__images">
-
+         <img src="./Images/tacos.jpeg" >
 
        </div>
 
