--- a/Index.html
+++ b/Index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
    </head>
     <body>
        <nav>
-
         <h1>ZASA TACOS</h1>
         <h1>MENU</h1>
         <h1>ABOUT US</h1>
@@ -20,23 +19,28 @@
        </nav>
 
        <div class="taco__images">
-         <img src="./Images/tacos.jpeg" >
+        
 
        </div>
 
        <div class="taco_description">
-
+           <h1>Where Hungry Eats</h1>
+           <p> ZASA TACOS produces quality TACOS with rich Mexi flavours. </p>
 
        </div>
 
        <div class="weekly__offers">
+          <h2>TACO Tuesday</h2> 
 
+          <h2>BurridoFul Thursday</h2>
+
+           <h2>Burridos</h2>
 
        </div>
 
        <div class="subscribe">
-
-
+           <h2 class="subscribe__text">SUBSCRIBE FOR HOT OFFERS</h2>
+         <p class="subscribe__text">Sign up for exclusive email offers, loyalty programs and perks! We'll let you know when we are roling out new limited time menu items, contests and giveaways</p>
        </div>
 
        <div class="reviews">
@@ -46,6 +50,7 @@
 
     </body>
     <footer>
+        
 
     </footer>
 </html>
