--- a/Index.html
+++ b/Index.html
@@ -8,14 +8,16 @@
    </head>
     <body>
        <nav>
+        <div class="nav">
         <h1>ZASA TACOS</h1>
         <h1>MENU</h1>
         <h1>ABOUT US</h1>
         <h1>LOCATION</h1>
         <h1>ORDER ONLINE</h1>
-        <img src="./Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
-        <img src="./Icons/SVG/Icon-facebook.svg" width="50px", height="50px">
-        <img src="./Icons/SVG/Icon-twitter.svg" width="50px", height="50px">
+        <img src="./Icons/SVG/Icon-facebook.svg" width="40px", height="40px">
+        <img src="./Icons/SVG/Icon-instagram.svg" width="40px", height="40px">
+        <img src="./Icons/SVG/Icon-twitter.svg" width="40px", height="40px">
+        </div>
        </nav>
 
        <div class="taco__images">
@@ -23,7 +25,7 @@
 
        </div>
 
-       <div class="taco_description">
+       <div class="taco__description">
            <h1>Where Hungry Eats</h1>
            <p> ZASA TACOS produces quality TACOS with rich Mexi flavours. </p>
 
@@ -32,9 +34,9 @@
        <div class="weekly__offers">
           <h2>TACO Tuesday</h2> 
 
-          <h2>BurridoFul Thursday</h2>
+          <h2>BurritoFul Thursday</h2>
 
-           <h2>Burridos</h2>
+          <h2>Burritos</h2>
 
        </div>
 
@@ -49,8 +51,11 @@
        </div>
 
     </body>
-    <footer>
-        
-
+    <footer class="footer">
+        <img src="Icons/SVG/Icon-facebook.svg">
+        <img src="Icons/SVG/Icon-instagram.svg">
+        <img src="Icons/SVG/Icon-twitter.svg">
+    <h3>Contact Us</h3>
+    <p>Subscribe for HOT Offers</p> 
     </footer>
 </html>
