--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,16 @@
         <img src="./Icons/SVG/Icon-twitter.svg" width="40px", height="40px">
         </div>
        </nav>
+       <script 
+       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" 
+       integrity="sha512-8Wy4KH0O+AuzjMm1w5QfZ5j5/y8Q/kcUktK9mPUVaUoBvh3QPUZB822W/vy7ULqri3yR8daH3F58+Y8Z08qzeg==" 
+       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script 
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineMax.min.js" 
+      integrity="sha512-lJDBw/vKlGO8aIZB8/6CY4lV+EMAL3qzViHid6wXjH/uDrqUl+uvfCROHXAEL0T/bgdAQHSuE68vRlcFHUdrUw==" 
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
+
 
        <div class="taco__images">
         
