--- a/Index.html
+++ b/Index.html
@@ -71,8 +71,14 @@
         <img src="Icons/SVG/Icon-instagram.svg">
         <img src="Icons/SVG/Icon-twitter.svg">
     <h3>Contact Us</h3>
+
     <p>Subscribe for HOT Offers</p> 
+
+    <h3>OPENING TIMES</h3>
+    <p>Monday</p>
+    <p>11:15am-9:30pm</p>
+
     </footer>
-    <script src="main-page.js"></script>
+    <script src="javascript.js"></script>
   
 </html>
