--- a/Index.html
+++ b/Index.html
@@ -67,16 +67,37 @@
 
     </body>
     <footer class="footer">
-        <img src="Icons/SVG/Icon-facebook.svg">
-        <img src="Icons/SVG/Icon-instagram.svg">
-        <img src="Icons/SVG/Icon-twitter.svg">
-    <h3>Contact Us</h3>
+        <div class="container">
+            <h3 class="container__header">Our Location</h3>
+            <p class="container__text">7888 Jane Street,</p>
+            <p class="container__text"> Vaughan, Ontario,</p>
+            <p class="container__text">Canada</p>
+          </div>
+          
 
-    <p>Subscribe for HOT Offers</p> 
+ <div class="container">
+  <h3 class="container__header">Opening Hours</h3>
+  <p class="container__text">Monday 11:15am - 9:30pm</p>
+  <p class="container__text">Tuesday 11:15am - 9:30pm</p>
+  <p class="container__text">Wednesday 11:15am - 9:30pm</p>
+  <p class="container__text">Thursday 11:15am - 9:30pm</p>
+  <p class="container__text">Friday 11:15am - 9:30pm</p>
+  <p class="container__text">Saturday 11:15am - 9:30pm</p>
+  <p class="container__text">Sunday 11:15am - 9:30pm</p>
+</div>
 
-    <h3>OPENING TIMES</h3>
-    <p>Monday</p>
-    <p>11:15am-9:30pm</p>
+
+<div class="container">
+  <h3 class="container__header">Contact Us</h3>
+  <p class="container__text">Call for Reservation: 416-999-9999</p>
+  <p class="container__text">Email:info@zasa.ca</p>
+  <img src="Icons/SVG/Icon-facebook.svg">
+  <img src="Icons/SVG/Icon-instagram.svg">
+  <img src="Icons/SVG/Icon-twitter.svg">
+</div>
+
+ 
+
 
     </footer>
     <script src="javascript.js"></script>
