--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,8 @@
      <header>
        <nav>
         <div class="nav">
-        <h1>ZASA TACOS</h1>
+        <h1><b>ZASA TACOS</b></h1>
         <h1>MENU</h1>
-        <h1>ABOUT US</h1>
         <h1>LOCATION</h1>
         <h1>ORDER ONLINE</h1>
         <img src="./Icons/SVG/Icon-facebook.svg" width="40px", height="40px">
@@ -43,16 +42,24 @@
        <div class="taco__description">
            <h1>Where Hungry Eats</h1>
            <p> ZASA TACOS produces quality TACOS with rich Mexi flavours. </p>
+           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid saepe doloremque officiis, tenetur consequatur repellat! Id reiciendis magnam similique, quas distinctio eius quo eligendi, vel labore dolore sed odit tempore.</p>
+  
 
        </div>
 
        <div class="weekly__offers">
+          <div>
           <h2>TACO Tuesday</h2> 
+          <img class="tuesday__taco" src="Images/Taco.webp">
+          </div>
 
-          <h2>BurritoFul Thursday</h2>
+          <div>
+          <h2>BurritoFul Thursday</h2> 
+          <img class="thusday__burito" src="Images/Thai-Burrito_-14-1024x1536.jpeg">
 
-          <h2>Burritos</h2>
+         </div>
 
+    
        </div>
 
        <div class="subscribe">
@@ -95,8 +102,6 @@
   <img src="Icons/SVG/Icon-instagram.svg">
   <img src="Icons/SVG/Icon-twitter.svg">
 </div>
-
- 
 
 
     </footer>
