--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
       <section> 
         <div class="hero">
             <img src="Images/tacos.jpeg">
-            <h1 class="headline">Where Hungry Eats</h1>
+            <h1 class="headline">Yummy Tacos</h1>
         </div>
 
       </section>
@@ -42,20 +42,20 @@
        <div class="taco__description">
            <h1>Where Hungry Eats</h1>
            <p> ZASA TACOS produces quality TACOS with rich Mexi flavours. </p>
-           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid saepe doloremque officiis, tenetur consequatur repellat! Id reiciendis magnam similique, quas distinctio eius quo eligendi, vel labore dolore sed odit tempore.</p>
-  
-
        </div>
 
        <div class="weekly__offers">
-          <div>
+         
+         <div class="tuesday__taco__div">
           <h2>TACO Tuesday</h2> 
           <img class="tuesday__taco" src="Images/Taco.webp">
-          </div>
+        </div>
+
+        </div>
 
           <div>
           <h2>BurritoFul Thursday</h2> 
-          <img class="thusday__burito" src="Images/Thai-Burrito_-14-1024x1536.jpeg">
+          <img class="thusday__burito" src="Images/Thai-Burrito_-14-1024x1536.jpeg" width= "400", height="450px">
 
          </div>
 
