--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" type="text/javascript"></script>
     <script src="api.js" defer></script>
     <title>ZASA 2022</title>
    </head>
@@ -92,8 +93,6 @@
 
        <div class="reviews">
 
-
-      
 
     </body>
     <footer class="footer">
